--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -44,7 +44,7 @@
                       </ul>
                     </div>
                   </li>
-                  <li><a href="/sports-betting-software/esports-betting-software">eSports betting</a></li>
+                  <li><a routerLink="/sports-betting-software/esports-betting-software">eSports betting</a></li>
                 </ul>
               </div>
             </li>
@@ -53,14 +53,14 @@
               <div class="sub_menu">
                 <ul>
                   <li>
-                    <a routerLink="/onlines_c">Online casino software</a>
+                    <a routerLink="/online-casino-software">Online casino software</a>
                   </li>
                   <li>
-                    <a routerLink="/livecasino">Live casino software</a>
+                    <a routerLink="/casino/live-casino">Live casino software</a>
                   </li>
-                  <li><a routerLink="/casinogames">Casino game</a></li>
+                  <li><a routerLink="/casino/casino-games">Casino game</a></li>
                   <li>
-                    <a routerLink="/lottery">Lottery and bingo</a>
+                    <a routerLink="/casino/lottery-games">Lottery and bingo</a>
                   </li>
                   <li>
                     <a routerLink="/casino/tournaments">Casino Tournaments</a>
@@ -109,10 +109,10 @@
 
               <div class="sub_menu">
                 <ul>
-                  <li><a routerLink="/demo">Demo</a></li>
-                  <li><a href="/About.html">About us</a></li>
+                  <li><a routerLink="/demo-sportsbook">Demo</a></li>
+                  <li><a routerLink="/about-us">About us</a></li>
                   <li>
-                    <a routerLink="/onlines">Online sportsbook software</a>
+                    <a routerLink="/online-sportsbook-software">Online sportsbook software</a>
                   </li>
                   <li><a routerLink="/certified-sports-betting-software">Certifications</a></li>
                 </ul>
@@ -226,27 +226,27 @@
               data-bs-parent="#accordionFlushExample"
             >
               <div class="accordion-body">
-                <a href="/sports_betting.html">sports betting software</a>
+                <a routerLink="/sports-betting-software">sports betting software</a>
               </div>
 
               <div class="accordion-body">
-                <a href="/sportsbook.html"> Sportsbook iFrame</a>
+                <a routerLink="/sportsbook-iframe"> Sportsbook iFrame</a>
               </div>
 
               <div class="accordion-body">
-                <a href="/wagering.html">Wagering solution</a>
+                <a routerLink="/wagering-solutions">Wagering solution</a>
               </div>
               <div class="accordion-body">
-                <a href="/cash.html">Cashout</a>
+                <a routerLink="/cashout">Cashout</a>
               </div>
               <div class="accordion-body">
-                <a href="/retail_solution.html">betting retail</a>
+                <a routerLink="/sports-betting-software/retail-solutions">betting retail</a>
               </div>
               <div class="accordion-body">
-                <a href="betting_terminal.html">betting Terminals</a>
+                <a routerLink="/betting-terminals">betting Terminals</a>
               </div>
               <div class="accordion-body">
-                <a href="/esports.html">eSports betting</a>
+                <a routerLink="/sports-betting-software/esports-betting-software" >eSports betting</a>
               </div>
             </div>
           </div>
@@ -270,22 +270,22 @@
               data-bs-parent="#accordionFlushExample"
             >
               <div class="accordion-body">
-                <a href="/online_casinp.html">Online Casino Software</a>
+                <a routerLink="/online-casino-software">Online Casino Software</a>
               </div>
               <div class="accordion-body">
-                <a href="/live_casino.html">Live casino Software</a>
+                <a routerLink="/casino/live-casino">Live casino Software</a>
               </div>
               <div class="accordion-body">
-                <a href="/casino_games.html">Casino games</a>
+                <a  routerLink="/casino/casino-games">Casino games</a>
               </div>
               <div class="accordion-body">
-                <a href="/lottery_games.html">Lottery and bingo</a>
+                <a routerLink="/casino/lottery-games">Lottery and bingo</a>
               </div>
               <div class="accordion-body">
-                <a href="/casino_tournaments.html">Casino Tournaments</a>
+                <a routerLink="/casino/tournaments">Casino Tournaments</a>
               </div>
               <div class="accordion-body">
-                <a href="/stream_platform.html">Streaming platform</a>
+                <a routerLink="/streaming-platform-casino-and-betting">Streaming platform</a>
               </div>
             </div>
           </div>
@@ -310,10 +310,10 @@
               data-bs-parent="#accordionFlushExample"
             >
               <div class="accordion-body">
-                <a href="/white_label.html">White label Sportsbook</a>
+                <a routerLink="/white-label-betting-platform">White label Sportsbook</a>
               </div>
               <div class="accordion-body">
-                <a href="/white label casino.html">White label Casino</a>
+                <a routerLink="/casino">White label Casino</a>
               </div>
             </div>
           </div>
@@ -338,19 +338,19 @@
               data-bs-parent="#accordionFlushExample"
             >
               <div class="accordion-body">
-                <a href="/web3_sportsbook.html">Web3 Sportsbook</a>
+                <a routerLink="/web3-sportsbook">Web3 Sportsbook</a>
               </div>
               <div class="accordion-body">
-                <a href="/crypto.html">White label crypto casino</a>
+                <a routerLink="/crypto-casino">White label crypto casino</a>
               </div>
               <div class="accordion-body">
-                <a href="web3 casino.html"> Web3 casino</a>
+                <a routerLink="/web3-casino"> Web3 casino</a>
               </div>
               <div class="accordion-body">
-                <a href="/Decentralized.html">Decentralized Sports betting</a>
+                <a routerLink="/decentralized-sports-betting">Decentralized Sports betting</a>
               </div>
               <div class="accordion-body">
-                <a href="/bitcoin.html">Bitcoin sportsbook</a>
+                <a routerLink="/bitcoin-sportsbook" >Bitcoin sportsbook</a>
               </div>
               <!-- <div class="accordion-body"> Streaming platform</div> -->
             </div>
@@ -375,18 +375,18 @@
               data-bs-parent="#accordionFlushExample"
             >
               <div class="accordion-body">
-                <a href="/demo.html">Demo</a>
+                <a routerLink="/demo-sportsbook" >Demo</a>
               </div>
               <div class="accordion-body">
-                <a href="/About.html">About Us</a>
+                <a routerLink="/about-us">About Us</a>
               </div>
               <div class="accordion-body">
-                <a href="/online_sports_book.html"
+                <a routerLink="/online-sportsbook-software"
                   >Online sportsbook Software</a
                 >
               </div>
               <div class="accordion-body">
-                <a href="/certificate.html">Certifications</a>
+                <a routerLink="/certified-sports-betting-software">Certifications</a>
               </div>
               <!-- <div class="accordion-body"> Bitcoin sportsbook</div> -->
               <!-- <div class="accordion-body"> Streaming platform</div> -->
@@ -402,7 +402,7 @@
                 aria-expanded="false"
                 aria-controls="flush-collapseseven"
               >
-                <a href="/contact-us.html">contact</a>
+                <a routerLink="/contact">contact</a>
               </button>
             </h2>
             <!-- <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
