--- a/src/app/header3/header3.component.html
+++ b/src/app/header3/header3.component.html
@@ -8,24 +8,24 @@
     <nav class="navbar">
   
       <ul class="navbar-list">
-        <li><a class="navbar-link" href="/index.html">Sirplay</a></li>
+        <li><a class="navbar-link" routerLink="/" >Sirplay</a></li>
         <li><a  class="navbar-link" href="">Sports betting software <i class="fa-solid fa-angle-down"></i></a>
           <ul id="submenu" >
-              <li><a href="/retail_solution.html">Retail solution <i class="fa-solid fa-angle-down"></i></a>
+              <li><a routerLink="/sports-betting-software/retail-solutions">Retail solution <i class="fa-solid fa-angle-down"></i></a>
               <ul id="menu">
-<li><a href="/betting_terminal.html">Betting terminals</a></li>
+<li><a routerLink="/betting-terminals" >Betting terminals</a></li>
               </ul>
               
               </li>
               <li><a routerLink="/sports-betting-software/mobile-betting-software">Mobile betting</a></li>
-              <li><a href="/cash.html">Cashout</a></li>
-              <li><a href="/sportsbook.html">Sportsbook iFrame   <i class="fa-solid fa-angle-down"></i></a>
+              <li><a routerLink="/cashout">Cashout</a></li>
+              <li><a routerLink="/sportsbook-iframe">Sportsbook iFrame   <i class="fa-solid fa-angle-down"></i></a>
                   <ul id="menu_2">
-                      <li><a href="/index.html"> Sport betting widget</a></li>
+                      <li><a routerLink="/"> Sport betting widget</a></li>
                   </ul>
               
               </li>
-              <li><a href="/esports.html">eSports betting</a></li>
+              <li><a routerLink="/sports-betting-software/esports-betting-software" >eSports betting</a></li>
 
           </ul>
       
@@ -33,9 +33,9 @@
       </li>
         <li><a class="navbar-link" href="#">White label casino <i class="fa-solid fa-angle-down"></i></a>
       <ul id="submenu">
-          <li><a href="/casino_games.html">Casino games</a></li>
-          <li><a href="/live_casino.html">Live Casino </a></li>
-          <li><a href="/lottery_games.html">Lottery games</a></li>
+          <li><a routerLink="/casino/casino-games">Casino games</a></li>
+          <li><a routerLink="/casino/live-casino" >Live Casino </a></li>
+          <li><a routerLink="/casino/lottery-games">Lottery games</a></li>
 
       </ul>
       
@@ -43,10 +43,10 @@
         <li><a class="navbar-link" href="#">Web3 <i class="fa-solid fa-angle-down"></i></a>
       
           <ul id="submenu">
-              <li><a href="/web3_sportsbook.html">Web3 Sportsbook</a></li>
-              <li><a href="/web3 casino.html">Web3 Casino </a></li>
-              <li><a href="/bitcoin.html">Bitcoin Sportsbook</a></li>
-              <li><a href="/Decentralized.html"> Decentralized Sport betting</a></li>
+              <li><a routerLink="/web3-sportsbook">Web3 Sportsbook</a></li>
+              <li><a routerLink="/web3-casino">Web3 Casino </a></li>
+              <li><a routerLink="/bitcoin-sportsbook">Bitcoin Sportsbook</a></li>
+              <li><a routerLink="/decentralized-sports-betting"> Decentralized Sport betting</a></li>
 
   
           </ul>
@@ -56,15 +56,15 @@
           <li><a class="navbar-link" href="#">Company <i class="fa-solid fa-angle-down"></i></a>
           
               <ul id="submenu">
-                  <li><a href="/About.html">About</a></li>
-                  <li><a href="/certificate.html">Certifications </a></li>
+                  <li><a routerLink="/about-us">About</a></li>
+                  <li><a routerLink="/certified-sports-betting-software">Certifications </a></li>
   
       
               </ul>
       
 
         </li>
-        <li><a class="navbar-link" href="/contact-us.html">Contact us</a></li>
+        <li><a class="navbar-link" routerLink="/contact">Contact us</a></li>
 
       </ul>
 
@@ -87,11 +87,11 @@
           <ul  class="res_data_1">
               <div class="use_list_1" id="panel_1">
               <li  (click)="animation1()"><a> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
-              <li><a href="/retail_solution.html">Retail solutions</a></li>
+              <li><a routerLink="/sports-betting-software/retail-solutions">Retail solutions</a></li>
               <li><a routerLink="/sports-betting-software/mobile-betting-software">Mobile betting</a></li>
-              <li><a href="/cash.html">Cashout</a></li>
-              <li> <a href="/sportsbook.html">Sportsbook IFrame </a></li>
-              <li><a href="/esports.html">eSports betting</a></li>
+              <li><a routerLink="/cashout">Cashout</a></li>
+              <li> <a routerLink="/sportsbook-iframe">Sportsbook IFrame </a></li>
+              <li><a routerLink="/sports-betting-software/esports-betting-software">eSports betting</a></li>
               </div>
           </ul>
           </div>
@@ -102,9 +102,9 @@
             <ul  class="res_data_1">
                 <div class="use_list_1" id="panel_2">
                 <li  (click)="animation_2()"><a> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
-                <li><a href="/casino_games.html">Casino games</a></li>
-                <li><a href="/live_casino.html">Live Casino</a></li>
-                <li><a href="/lottery_games.html">Lottery</a></li>
+                <li><a routerLink="/casino/casino-games">Casino games</a></li>
+                <li><a routerLink="/casino/live-casino">Live Casino</a></li>
+                <li><a routerLink="/casino/lottery-games">Lottery</a></li>
                 </div>
             </ul>
             </div>
@@ -116,10 +116,10 @@
             <ul  class="res_data_1">
                 <div class="use_list_1" id="panel_3">
                 <li  (click)="animated_1()"><a> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
-                <li><a href="/web3_sportsbook.html">Web3 Sportsbook</a></li>
-                <li><a href="/web3 casino.html">Web3 Casino</a></li>
-                <li><a href="/bitcoin.html">Bitcoin Sportsbook</a></li>
-                <li><a href="/Decentralized.html">Decentralized Sports betting</a></li>
+                <li><a routerLink="/web3-sportsbook">Web3 Sportsbook</a></li>
+                <li><a routerLink="/web3-casino">Web3 Casino</a></li>
+                <li><a routerLink="/bitcoin-sportsbook">Bitcoin Sportsbook</a></li>
+                <li><a routerLink="/decentralized-sports-betting">Decentralized Sports betting</a></li>
                 </div>
             </ul>
             </div>
@@ -131,8 +131,8 @@
               <ul  class="res_data_1">
                   <div class="use_list_1" id="panel_4">
                   <li (click)="anime_1()"><a> <i class="fa-solid fa-arrow-left fa-bounce"></i> Back</a></li>
-                  <li><a href="/About.html">About</a></li>
-                  <li><a href="/certificate.html">Certifications</a></li>
+                  <li><a routerLink="/about-us">About</a></li>
+                  <li><a routerLink="/certified-sports-betting-software">Certifications</a></li>
             
                   </div>
               </ul>
