--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -148,7 +148,7 @@
             
         </div>
         
-       <button class="btns_lives_sec"> Book a Demo</button>
+       <button class="btns_lives_sec">Book a demo</button>
         </div>
     </div>
 
@@ -157,4 +157,8 @@
 </div>
 </section>
 
+<app-contact-component2></app-contact-component2>
+
+
 <app-footers2></app-footers2>
+
