--- a/src/app/header2/header2.component.css
+++ b/src/app/header2/header2.component.css
@@ -645,7 +645,6 @@ nav{
     background-color: #FFF;
     color: #000;
     font-size: 18px;
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);  
   }
   .hader_row{
     display: flex;
@@ -809,6 +808,7 @@ nav{
   .accordion-flush .accordion-item .accordion-button, .accordion-flush .accordion-item .accordion-button.collapsed {
     border-radius: 0;
     background: #ede5e5;
+    padding: 12px;
   }
   .accord_btn{
     background-color: #ede5e5;
@@ -817,7 +817,8 @@ nav{
     width: 100%;
     text-align: start;
     border: none;
-    padding-left: 19px;
+    padding-left: 12px;
+    color: black;
   
   }
   
@@ -841,6 +842,8 @@ nav{
   .page-header.is-sticky {
     position: fixed;
     animation: smoothScroll 1s forwards;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.1);  
+
   
   }
   @keyframes smoothScroll {
