--- a/src/app/crypto/crypto.component.html
+++ b/src/app/crypto/crypto.component.html
@@ -25,7 +25,7 @@
 
 
       <div class="crypto-online-casino_col_2">
-  <img class="images_crypto" src="assets/Casino-software.jpg.webp">
+  <img class="images_crypto" src="assets/sirplay crypto s.jpg" width="595" height="457">
   <div class="crypto-online-casino-youtube">
     <a href="#"><img class="crypto-youtube-img" src="assets/play.png.webp" width="118" height="73"></a>
   </div>
@@ -72,7 +72,7 @@
 <div class="crypto-section3-main">
 
 <div class="crypto-section3-leftimg">
-<img class="crypto_images_1" src="assets/crypto-casino-live-games.jpg.webp" alt="">
+<img class="crypto_images_1" src="assets/sirplay crypto tv.jpg" alt="" width="601" height="613">
 </div>
 
 
@@ -110,7 +110,7 @@
     <div class="web3_page_row">
         <div class="web_page_col">
             <h1 class="web_3_header">Top online casino providers at World Class</h1>
-            <img class="web_3_images" src="assets/web3casino-768x640.jpg.webp">
+            <img class="web_3_images" src="assets/sirplay online c.jpg" width="840" height="700">
         </div>
         <div class="web_page_col_1">
             <p class="web3_header_crp"> <strong> The numbers of our crypto casino software </strong></p>
@@ -177,7 +177,7 @@
 
         <div class="crypto-section6-right">
             <h2>Lottery and Bingo games online and retails</h2>
-            <img src="assets/crypto-bingo-providers-768x274.jpg" alt="">
+            <img src="assets/sirplay bingo.jpg" alt="" width="768" height="274">
         </div>
     </div>
 
