--- a/src/app/demo/demo.component.html
+++ b/src/app/demo/demo.component.html
@@ -36,7 +36,7 @@
       <div class="demo_sec_col_1">
         <img
           class="demo_sec_images"
-          src="assets/sports-betting-software-online-and-retail.jpg.webp"
+          src="assets/sirplay platform.jpg"
         />
 
         <div class="demo_btn_sec">
