--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -81,9 +81,9 @@
       <div class="whites_col_1">
         <img
           class="whites_sec_img2"
-          src="assets/sports_betting-software-1.jpg.webp"
-          width="520"
-          height="280"
+          src="assets/sirplay whites.jpg"
+          width="543"
+          height="317"
         />
       </div>
     </div>
@@ -94,9 +94,9 @@
       <div class="gaming_col">
         <img
           class="gaming_img"
-          src="assets/casino_software-1.jpg.webp"
+          src="assets/sirplay igaming.jpg"
           width="520"
-          height="280"
+          height="325"
         />
       </div>
       <div class="gaming_col_2">
@@ -149,7 +149,7 @@
       <div class="casino_col_2">
         <img
           class="casino_sec_img2"
-          src="assets/sirplay vrnl 4.jpg"
+          src="assets/sirplay online c.jpg"
           width="840"
           height="700"
         />
