--- a/src/app/web3sportbook/web3sportbook.component.html
+++ b/src/app/web3sportbook/web3sportbook.component.html
@@ -91,7 +91,7 @@
                 casino games and casino games available online.</li>
         </ul>
         <div class="web_3_igaming_img">
-            <img class="web_images_1" src="assets/web3iGamingplatform-1024x305.jpg.webp" title="Web3 plateform">
+            <img class="web_images_1" src="assets/sirplay web3.jpg" title="Web3 plateform" width="1024" height="352">
         </div>
     </div>
 
