--- a/src/app/whitecasino/whitecasino.component.html
+++ b/src/app/whitecasino/whitecasino.component.html
@@ -28,7 +28,7 @@
     <section class="whites_label_sec">
         <div class="whites_c_row">
             <div class="white_f_col">
-    <img class="tv_image" src="assets/Casino-live-games-sirplay.jpg.webp">
+    <img class="tv_image" src="assets/sirplay crypto tv.jpg" width="668" height="682">
             </div>
             <div class="white_f_col_1">
     <h1 class="white_f_h">White label casino</h1>
@@ -65,7 +65,7 @@
         <p class="param_fea">Starting an Online Casino can be tricky! That is why we have created a complete Casino environment, with the best gaming providers with the aim of offering you the widest selection of slots and casino games available online, <strong>with over 50,000 games</strong> . The gaming math is secure and certified.</p>
         <p class="param_fea">With extensive risk management tools to enable a quick and easy set-up, which is ready to grow as your business does.</p>
     <br>
-        <img class="explain_img" src="assets/white-label-casino-platform.jpg (1).webp">
+        <img class="explain_img" src="assets/sirplay white s.jpg" width="900" height="355">
      </div>
     </div>
     </section>
@@ -89,7 +89,12 @@
         Our long experience and our intuition gave birth to the fastest and most powerful application existing nowadays.</p>
         </div>
         <div class="white_csol_col_1">
-    <img class="images_whites_sol" src="assets/web3casino-768x640.jpg.webp">
+      <img
+          class="casino_sec_img2"
+          src="assets/sirplay online c.jpg"
+          width="671"
+          height="599"
+        />
         </div>
     </div>
     </section>
