--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -42,7 +42,7 @@
     </div>
 
 <div class="sports_book_col_1">
-<img src="assets/sportsbook-provider.png (1).webp">
+<img src="assets/sirplay sportbook.jpg" width="410" height="504">
 </div>
 
 </div>
