changes images again

--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -39,7 +39,7 @@
         <img
           class="platform_img"
           src="assets/sirplay vrnl 1.jpg"
-        width="544" height="280">
+        width="544" height="310">
         <div class="platform_you_tube">
           <a href="#"
             ><img
@@ -165,9 +165,9 @@
           Play at the live casino as if you were directly inside the casino
         </h1>
         <img
-          src="assets/web3livecasino-768x312.jpg.webp"
-          width="840"
-          height="341"
+          src="assets/sirplay vrnl 19.jpg"
+          width="809"
+          height="372"
         />
       </div>
       <div class="live_col_1">
@@ -224,8 +224,8 @@
       <div class="web3_col_1">
         <img
           class="web3_img"
-          src="assets/web3_sports.jpg.webp"
-          width="280"
+          src="assets/sirplay vrnl 22.jpg"
+          width="353"
           height="650"
         />
       </div>
@@ -255,9 +255,9 @@
       <div class="crypto_col_1">
         <img
           class="crypto_sec_img2"
-          src="assets/crypto_sportsbook.jpg.webp"
-          width="520"
-          height="280"
+          src="assets/sirplay vrnl 33.jpg"
+          width="531"
+          height="295"
           title="Crypto Sportsbook"
           alt="Crypto"
         />
@@ -269,10 +269,10 @@
     <div class="integration_row">
       <div class="integration_col">
         <img
-          src="/assets/integration_with_other_platforms.jpg.webp"
+          src="assets/sirplay vrnl 12.jpg"
           title="integration_platforms"
-          width="520"
-          height="280"
+          width="545"
+          height="315"
         />
       </div>
       <div class="integration_col_1">
