--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -4,7 +4,7 @@
     <div class="main_sec">
       <section class="typing-container">
         <h1 class="home_header_h1">
-          Sports betting software White Label<span class="typing-text"></span>
+          Sport betting software White Label<span class="typing-text"></span>
         </h1>
       </section>
       <p class="param">
