changes (images compress)

--- a/src/app/crypto/crypto.component.html
+++ b/src/app/crypto/crypto.component.html
@@ -25,7 +25,7 @@
 
 
       <div class="crypto-online-casino_col_2">
-  <img class="images_crypto" src="assets/sirplay crypto s.jpg" width="595" height="457">
+  <img class="images_crypto" src="assets/sirplay crypto s3.jpg" width="595" height="457">
   <div class="crypto-online-casino-youtube">
     <a href="#"><img class="crypto-youtube-img" src="assets/play.png.webp" width="118" height="73"></a>
   </div>
@@ -72,7 +72,7 @@
 <div class="crypto-section3-main">
 
 <div class="crypto-section3-leftimg">
-<img class="crypto_images_1" src="assets/sirplay crypto tv.jpg" alt="" width="601" height="613">
+<img class="crypto_images_1" src="assets/csirplaycryptotv1.jpg" alt="" width="601" height="613">
 </div>
 
 
