--- a/src/app/casino-tournament/casino-tournament.component.html
+++ b/src/app/casino-tournament/casino-tournament.component.html
@@ -21,7 +21,7 @@
 
 
         <div class="index5-right-img">
-            <img src="assets/sirplay vrnl 2.jpg" alt="" width="589"  height="389">
+            <img src="assets/sirplay vrnl 2 demo.jpg" alt="" width="589"  height="389">
             
         </div>
 
