--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -1,6 +1,6 @@
 
 <app-header></app-header>
-<section id="animate-area" >
+<section id="animate-area" class="animated-background">
     <div class="main_sec">
       <section class="typing-container">
         <h1 class="home_header_h1">
